--- a/WEB VOLBEAT/live.html
+++ b/WEB VOLBEAT/live.html
@@ -27,7 +27,7 @@
         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">Sobre Volbeat</a></li>
         <li class="nav-item"><a class="nav-link" href="discography.html">Discografía</a></li>
-        <li class="nav-item"><a class="nav-link active" href="live.html">Directo</a></li>
+        <li class="nav-item"><a class="nav-link active" href="live.html">En vivo!</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
       </ul>
     </div>
@@ -43,9 +43,6 @@
     mezcla de heavy metal, rockabilly y rock & roll.
   </p>
 
- 
-
-  <!-- GALERÍA DE DIRECTO -->
   <section>
     <h3>Galería de fotos</h3>
 
@@ -92,7 +89,7 @@
 
 </main>
 
-<!-- FOOTER -->
+
 <footer class="bg-dark text-light py-3">
   <div class="container text-center">
     <small>Página no oficial — José Manuel Moreno Raya</small>
