--- a/WEB VOLBEAT/live.html
+++ b/WEB VOLBEAT/live.html
@@ -40,7 +40,7 @@
   <h1 class="mb-3">Volbeat en Directo</h1>
   <p class="lead">
     Los conciertos de Volbeat son conocidos por su enorme energía,
-    mezcla de heavy metal, rockabilly y rock & roll.
+    mezcla de heavy metal, rockabilly y rock & roll
   </p>
 
   <section>
