--- a/WEB VOLBEAT/index.html
+++ b/WEB VOLBEAT/index.html
@@ -118,12 +118,12 @@
         <div class="col-md-6">
           <label for="name" class="form-label">Nombre</label>
           <input id="name" class="form-control" required>
-          <div class="invalid-feedback">Introduce tu nombre.</div>
+          <div class="invalid-feedback">Introduce tu nombre</div>
         </div>
         <div class="col-md-6">
           <label for="email" class="form-label">Email</label>
           <input id="email" type="email" class="form-control" required>
-          <div class="invalid-feedback">Email válido requerido.</div>
+          <div class="invalid-feedback">Email válido requerido</div>
         </div>
         <div class="col-12">
           <button class="btn btn-primary" type="submit">Suscribirse</button>
