--- a/WEB VOLBEAT/about.html
+++ b/WEB VOLBEAT/about.html
@@ -43,7 +43,7 @@ En directo, Volbeat es conocida por ofrecer espectáculos intensos, enérgicos y
 
 <h3>Historia de sus canciones</h3>
     <ul>
-      <li>Fallen — La canción fue dedicada al padre fallecido del vocalista Michael Poulsen</li>
+      <li>Fallen — La canción fue dedicada al padre fallecido de Michael Poulsen</li>
       <li>Mary Jane Kelly — Se cree que Mary Jane Kelly fue la última víctima del infame "Jack el Destripador". Su cuerpo fue descubierto el 9 de noviembre de 1888 por Thomas Bowyer, quien trabajaba para el casero de Mary</li>
       <li>Light a Way — Esta canción trata sobre un niño huérfano que fue separado de su madre y de su hogar a la fuerza. La llevaron como esclava y su hijo comenzó a caminar por el camino entre los campos de maíz, implorando la ayuda del Señor. Un día, conoce a los Guitar Gangsters de otras canciones. Le dicen que intentarán encontrar a su madre y liberarla</li>
     </ul>
